--- a/videoweb.html/video9.html
+++ b/videoweb.html/video9.html
@@ -357,49 +357,46 @@
 
           <div class="view flex2 border_bottom" id="xxx">
 
-            
-            <div class="view flex2 border_bottom" id="xxx">
 
 
+            <div class="flex">
 
-              <div class="flex">
-  
-                <div class="icon">
-  
-                  <i class="fa fa-thumbs-up"></i>
-  
-                  <label>69k</label>
-  
-                </div>
-  
-                <div class="icon">
-  
-                  <i class="fa fa-thumbs-down"></i>
-  
-                  <label>DISLIKE</label>
-  
-                </div>
-  
-                <div class="icon">
-  
-                  <i class="fa fa-share"></i>
-  
-                  <label>SHARE</label>
-  
-                </div>
-  
-  
-  
-  
-                <div class="icon">
-  
-                  <i class="fa fa-ellipsis"></i>
-  
-                </div>
-  
+              <div class="icon">
+
+                <i class="fa fa-thumbs-up"></i>
+
+                <label>69k</label>
+
               </div>
-  
+
+              <div class="icon">
+
+                <i class="fa fa-thumbs-down"></i>
+
+                <label>DISLIKE</label>
+
+              </div>
+
+              <div class="icon">
+
+                <i class="fa fa-share"></i>
+
+                <label>SHARE</label>
+
+              </div>
+
+
+
+
+              <div class="icon">
+
+                <i class="fa fa-ellipsis"></i>
+
+              </div>
+
             </div>
+
+          </div>
           <!--        total viwer            -->
 
           <!--        video details            -->
@@ -836,6 +833,11 @@
               <span>DHIRAJHUB <i class="fa fa-cricle-check"> </i> </span>
               <span>56.7M . 1 Week ago</span>
             </div>
+          </div>
+          <div class="more">
+            <a href="/">
+          <button class="btn-more">MORE...</button>
+            </a>
           </div>
         </div>
       </div>
