--- a/videoweb.html/video18.html
+++ b/videoweb.html/video18.html
@@ -841,6 +841,12 @@
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
+          
+          <div class="more">
+            <a href="/">
+          <button class="btn-more">MORE...</button>
+            </a>
+          </div>
         </div>
       </div>
     </section>
