--- a/videoweb.html/video19.html
+++ b/videoweb.html/video19.html
@@ -844,6 +844,11 @@
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
+          <div class="more">
+            <a href="/">
+          <button class="btn-more">MORE...</button>
+            </a>
+          </div>
         </div>
       </div>
     </section>
