--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
       </div>
       <div class="video_items">
         <a href="/videoweb.html/video16.html">
-          Coming soon
+          <img src="images/video_images/16.jpg" alt="">
         </a>
         <div class="details flex">
 
