--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
           <div class="heading">
             <p>Coming Soon</p>
             <span>DHIRAJHUB <i class="fa fa-circle-check"></i> </span>
-            <span>56.7M .1 Week ago</span>
+            <span>69M 1 Week ago</span>
           </div>
         </div>
       </div>
