--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
   <!--    nav      -->
 
 
-  <main>
+  <main class="main">
     <section class="video_content grid">
       <!--video template-->
       <div class="video_items">
