--- a/videoweb.html/video2.html
+++ b/videoweb.html/video2.html
@@ -95,86 +95,110 @@
         </a>
 
         <div class="nav_list">
-          <i class="fa-brands fa-tiktok nav_icon"></i>
 
-          <span class="nav_name">Short Video</span>
+          <div class="nav_items navtop">
 
-          </a>-->
+            <a href="#" class="nav_link navtop active">
 
-          <a href="/html/profile.html" class="nav_link navtop">
+              <i class="fa fa-house nav_icon"></i>
 
-            <i class="fa-solid fa-users nav_icon"></i>
-
-            <span class="nav_name">About</span>
-
-          </a>
-
-          <a href="#" class="nav_link navtop">
-
-            <i class="fa-solid fa-video nav_icon"></i>
-
-            <span class="nav_name">Library</span>
-
-          </a>
-
-          <a href="#" class="nav_link navtop">
-
-            <i class="fa-solid fa-clock-rotate-left nav_icon"></i>
-
-            <span class="nav_name">History</span>
-
-          </a>
-
-          <a href="#" class="nav_link navtop">
-
-            <i class="fa-solid fa-thumbs-up nav_icon"></i>
-
-            <span class="nav_name">Like</span>
-
-          </a>
-
-          <div class="nav_dropdown">
-
-            <a href="#" class="nav_link">
-
-              <i class="fa-solid fa-layer-group nav_icon"></i>
-
-              <span class="nav_name">Categories</span>
-
-              <i class="fa-solid fa-chevron-down nav_icon"></i>
+              <span class="nav_name">Home</span>
 
             </a>
 
-            <div class="nav_dropdown-collapse">
+            <a href="#" class="nav_link navtop">
 
-              <div class="nav_dropdown-content">
-                <a href="/categories/anal.html" class="nav_dropdown-item">Anal</a>
-                <a href="/categories/aunty.html" class="nav_dropdown-item">Aunty</a>
-                <a href="/categories/arab.html" class="nav_dropdown-item">Arab</a>
-                <a href="/categories/asian.html" class="nav_dropdown-item">Asian</a>
-                <a href="/categories/bbc.html" class="nav_dropdown-item">BBC</a>
-                <a href="/categories/bbw.html" class="nav_dropdown-item">BBW</a>
-                <a href="/categories/bhabhi.html" class="nav_dropdown-item">Bhabhi</a>
-                <a href="/categories/black.html" class="nav_dropdown-item">Black</a>
-                <a href="/categories/cumshot.html" class="nav_dropdown-item">Cumshot</a>
-                <a href="/categories/deepthroat.html" class="nav_dropdown-item">Deepthroat</a>
-                <a href="/categories/gangbang.html" class="nav_dropdown-item">Gangbang</a>
-                <a href="/categories/hardcore.html" class="nav_dropdown-item">Hardcore</a>
-                <a href="/categories/hentai.html" class="nav_dropdown-item">Hentai</a>
-                <a href="/categories/hindi.html" class="nav_dropdown-item">Hindi</a>
-                <a href="/categories/indian.html" class="nav_dropdown-item">Indian</a>
-                <a href="/categories/maid.html" class="nav_dropdown-item">Maid</a>
-                <a href="/categories/mms.html" class="nav_dropdown-item">MMS</a>
-                <a href="/categories/movie.html" class="nav_dropdown-item">Movie</a>
-                <a href="/categories/solo.html" class="nav_dropdown-item">Solo</a>
-                <a href="/categories/ownerschoice.html" class="nav_dropdown-item">Owner's Choice</a>
+              <i class="fa fa-compass nav_icon"></i>
 
+              <span class="nav_name">Explore</span>
+
+            </a>
+
+            <!-- <a href="#" class="nav_link navtop">
+
+              <i class="fa-brands fa-tiktok nav_icon"></i>
+
+              <span class="nav_name">Short Video</span>
+
+            </a>-->
+
+            <a href="/html/profile.html" class="nav_link navtop">
+
+              <i class="fa-solid fa-users nav_icon"></i>
+
+              <span class="nav_name">About</span>
+
+            </a>
+
+            <a href="#" class="nav_link navtop">
+
+              <i class="fa-solid fa-video nav_icon"></i>
+
+              <span class="nav_name">Library</span>
+
+            </a>
+
+            <a href="#" class="nav_link navtop">
+
+              <i class="fa-solid fa-clock-rotate-left nav_icon"></i>
+
+              <span class="nav_name">History</span>
+
+            </a>
+
+            <a href="#" class="nav_link navtop">
+
+              <i class="fa-solid fa-thumbs-up nav_icon"></i>
+
+              <span class="nav_name">Like</span>
+
+            </a>
+
+            <div class="nav_dropdown">
+
+              <a href="#" class="nav_link">
+
+                <i class="fa-solid fa-layer-group nav_icon"></i>
+
+                <span class="nav_name">Categories</span>
+
+                <i class="fa-solid fa-chevron-down nav_icon"></i>
+
+              </a>
+
+              <div class="nav_dropdown-collapse">
+
+                <div class="nav_dropdown-content">
+
+                  <a href="/categories/anal.html" class="nav_dropdown-item">Anal</a>
+                  <a href="/categories/aunty.html" class="nav_dropdown-item">Aunty</a>
+                  <a href="/categories/arab.html" class="nav_dropdown-item">Arab</a>
+                  <a href="/categories/asian.html" class="nav_dropdown-item">Asian</a>
+                  <a href="/categories/bbc.html" class="nav_dropdown-item">BBC</a>
+                  <a href="/categories/bbw.html" class="nav_dropdown-item">BBW</a>
+                  <a href="/categories/bhabhi.html" class="nav_dropdown-item">Bhabhi</a>
+                  <a href="/categories/black.html" class="nav_dropdown-item">Black</a>
+                  <a href="/categories/cumshot.html" class="nav_dropdown-item">Cumshot</a>
+                  <a href="/categories/deepthroat.html" class="nav_dropdown-item">Deepthroat</a>
+                  <a href="/categories/gangbang.html" class="nav_dropdown-item">Gangbang</a>
+                  <a href="/categories/hardcore.html" class="nav_dropdown-item">Hardcore</a>
+                  <a href="/categories/hentai.html" class="nav_dropdown-item">Hentai</a>
+                  <a href="/categories/hindi.html" class="nav_dropdown-item">Hindi</a>
+                  <a href="/categories/indian.html" class="nav_dropdown-item">Indian</a>
+                  <a href="/categories/maid.html" class="nav_dropdown-item">Maid</a>
+                  <a href="/categories/mms.html" class="nav_dropdown-item">MMS</a>
+                  <a href="/categories/movie.html" class="nav_dropdown-item">Movie</a>
+                  <a href="/categories/solo.html" class="nav_dropdown-item">Solo</a>
+                  <a href="/categories/ownerschoice.html" class="nav_dropdown-item">Owner's Choice</a>
+
+
+
+
+                </div>
 
               </div>
 
-            </div>
-
-            <!-- 
+              <!-- 
 
              <div class="nav_items subscribe-container">
 
@@ -190,9 +214,9 @@
 
              </div>-->
 
-          </div>
+            </div>
 
-          <!--  <div class="nav_items subscribe-container">
+            <!--  <div class="nav_items subscribe-container">
 
          
 
@@ -274,13 +298,13 @@
 
           </div>-->
 
+          </div>
+
         </div>
 
-  </div>
+      </nav>
 
-  </nav>
-
-  </section>
+    </section>
 
   </div>
 
