--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link type="images/png" rel="icon" href="/images/logo1.jpeg">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
     integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
@@ -23,10 +25,21 @@
       </a>
     </div>
     <div class="none"> </div>
-    <div class="search">
-      <input type="text" placeholder="Search">
-      <i class="fa-solid fa-magnifying-glass"></i>
+    <div class="wrapper">
+      <div class="search-input">
+        <a href="" target="_blank" hidden></a>
+        <input type="text" placeholder="Type to search..">
+        <div class="autocom-box">
+          <!-- here list are inserted from javascript -->
+        </div>
+        <div class="icon"><i class="fas fa-search"></i></div>
+      </div>
     </div>
+
+    <script src="/js/suggestions.js"></script> 
+     <script src="/js/script.js"></script> 
+
+ 
 
     <br>
 
@@ -37,7 +50,7 @@
     </div>
   </header>
   <!--    header      -->
-
+  
 
   <!--    nav      -->
   <div>
@@ -102,30 +115,30 @@
                 <i class="fa-solid fa-chevron-down nav_icon"></i>
 
               </a>
-              <div class="nav_dropdown-collapse">
-                <div class="nav_dropdown-content">
-                  <a href="/categories/anal.html" class="nav_dropdown-item">Anal</a>
-                  <a href="/categories/aunty.html" class="nav_dropdown-item">Aunty</a>
-                  <a href="/categories/arab.html" class="nav_dropdown-item">Arab</a>
-                  <a href="/categories/asian.html" class="nav_dropdown-item">Asian</a>
-                  <a href="/categories/bbc.html" class="nav_dropdown-item">BBC</a>
-                  <a href="/categories/bbw.html" class="nav_dropdown-item">BBW</a>
-                  <a href="/categories/bhabhi.html" class="nav_dropdown-item">Bhabhi</a>
-                  <a href="/categories/black.html" class="nav_dropdown-item">Black</a>
-                  <a href="/categories/cumshot.html" class="nav_dropdown-item">Cumshot</a>
-                  <a href="/categories/deepthroat.html" class="nav_dropdown-item">Deepthroat</a>
-                  <a href="/categories/gangbang.html" class="nav_dropdown-item">Gangbang</a>
-                  <a href="/categories/hardcore.html" class="nav_dropdown-item">Hardcore</a>
-                  <a href="/categories/hentai" class="nav_dropdown-item">Hentai</a>
-                  <a href="/categories/hindi" class="nav_dropdown-item">Hindi</a>
-                  <a href="/categories/indian.html" class="nav_dropdown-item">Indian</a>
-                  <a href="/categories/maid.html" class="nav_dropdown-item">Maid</a>
-                  <a href="/categories/mms.html" class="nav_dropdown-item">MMS</a>
-                  <a href="/categories/movie.html" class="nav_dropdown-item">Movie</a>
-                  <a href="/categories/solo.html" class="nav_dropdown-item">Solo</a>
-                  <a href="/categories/ownerschoice.html" class="nav_dropdown-item">Owner's Choice</a>
+              <div class="nav_dropdown-collaps">
+                <ul class="nav_dropdown-content" id="myUL">
+                  <li> <a href="/categories/anal.html" class="nav_dropdown-item">Anal</a></li>
+                  <li> <a href="/categories/aunty.html" class="nav_dropdown-item">Aunty</a></li>
+                  <li> <a href="/categories/arab.html" class="nav_dropdown-item">Arab</a></li>
+                  <li> <a href="/categories/asian.html" class="nav_dropdown-item">Asian</a></li>
+                  <li> <a href="/categories/bbc.html" class="nav_dropdown-item">BBC</a></li>
+                  <li> <a href="/categories/bbw.html" class="nav_dropdown-item">BBW</a></li>
+                  <li> <a href="/categories/bhabhi.html" class="nav_dropdown-item">Bhabhi</a></li>
+                  <li> <a href="/categories/black.html" class="nav_dropdown-item">Black</a></li>
+                  <li> <a href="/categories/cumshot.html" class="nav_dropdown-item">Cumshot</a></li>
+                  <li> <a href="/categories/deepthroat.html" class="nav_dropdown-item">Deepthroat</a></li>
+                  <li> <a href="/categories/gangbang.html" class="nav_dropdown-item">Gangbang</a></li>
+                  <li> <a href="/categories/hardcore.html" class="nav_dropdown-item">Hardcore</a></li>
+                  <li> <a href="/categories/hentai" class="nav_dropdown-item">Hentai</a></li>
+                  <li> <a href="/categories/hindi" class="nav_dropdown-item">Hindi</a></li>
+                  <li> <a href="/categories/indian.html" class="nav_dropdown-item">Indian</a></li>
+                  <li> <a href="/categories/maid.html" class="nav_dropdown-item">Maid</a></li>
+                  <li> <a href="/categories/mms.html" class="nav_dropdown-item">MMS</a></li>
+                  <li> <a href="/categories/movie.html" class="nav_dropdown-item">Movie</a></li>
+                  <li> <a href="/categories/solo.html" class="nav_dropdown-item">Solo</a></li>
+                  <li> <a href="/categories/ownerschoice.html" class="nav_dropdown-item">Owner's Choice</a></li>
 
-                </div>
+                </ul>
               </div>
             </div>
             <div class="msg">
@@ -553,7 +566,7 @@
 
   </div>
 
-
+  <script src="/js/search.js" charset="utf-8"></script>
   <script src="/js/main.js" charset="utf-8"></script>
 </body>
 
