--- a/videoweb.html/video1.html
+++ b/videoweb.html/video1.html
@@ -28,75 +28,85 @@
 </head>
 
 <body>
- <!--    header      -->
- <header class="header">
-  <div class="header_container">
+  <!--    header      -->
+  <header class="header">
+    <div class="header_container">
 
-    <a href="/">
-      <div class="img" id="logo">
-        <img src="/images/logo.jpeg" alt="">
-      </div>
-    </a>
-  </div>
-  <div class="none"> </div>
-  <div class="search">
-    <input type="text" placeholder="Search">
-    <i class="fa-solid fa-magnifying-glass"></i>
-  </div>
-
-  <br>
-
-
-  <div class="toggle">
-    <i class="fa-solid fa-bars" id="header-toggle"></i>
-  </div>
-  </div>
-</header>
-<!--    header      -->
-
-
-<!--    nav      -->
-<div>
-
-  <section class="nav" id="navbar">
-
-    <nav class="nav_container">
-
-      <a href="#" class="nav_link nav_logo ">
-
-        <i class="fa-solid fa-bars nav_icon" id="menu2"></i>
-
-        <span class="logo_name">
-
-          <i class="fab fa-youtube"></i>
-
-          DHIRAJHUB
-
-        </span>
-
+      <a href="/">
+        <div class="img" id="logo">
+          <img src="/images/logo.jpeg" alt="">
+        </div>
       </a>
+    </div>
+    <div class="none"> </div>
+     <div class="wrapper">
+      <div class="search-input">
+        <a href="" target="_blank" hidden></a>
+        <input type="text" placeholder="Type to search..">
+        <div class="autocom-box">
+          <!-- here list are inserted from javascript -->
+        </div>
+        <div class="icon"><i class="fas fa-search"></i></div>
+      </div>
+    </div>
 
-      <div class="nav_list">
+    <script src="/js/suggestions.js"></script> 
+     <script src="/js/script.js"></script> 
 
-        <div class="nav_items navtop">
 
-          <a href="#" class="nav_link navtop active">
 
-            <i class="fa fa-house nav_icon"></i>
 
-            <span class="nav_name">Home</span>
 
-          </a>
+    <div class="toggle">
+      <i class="fa-solid fa-bars" id="header-toggle"></i>
+    </div>
+    </div>
+  </header>
+  <!--    header      -->
 
-          <a href="#" class="nav_link navtop">
 
-            <i class="fa fa-compass nav_icon"></i>
+  <!--    nav      -->
+  <div>
 
-            <span class="nav_name">Explore</span>
+    <section class="nav" id="navbar">
 
-          </a>
+      <nav class="nav_container">
 
-          <!-- <a href="#" class="nav_link navtop">
+        <a href="#" class="nav_link nav_logo ">
+
+          <i class="fa-solid fa-bars nav_icon" id="menu2"></i>
+
+          <span class="logo_name">
+
+            <i class="fab fa-youtube"></i>
+
+            DHIRAJHUB
+
+          </span>
+
+        </a>
+
+        <div class="nav_list">
+
+          <div class="nav_items navtop">
+
+            <a href="#" class="nav_link navtop active">
+
+              <i class="fa fa-house nav_icon"></i>
+
+              <span class="nav_name">Home</span>
+
+            </a>
+
+            <a href="#" class="nav_link navtop">
+
+              <i class="fa fa-compass nav_icon"></i>
+
+              <span class="nav_name">Explore</span>
+
+            </a>
+
+            <!-- <a href="#" class="nav_link navtop">
 
             <i class="fa-brands fa-tiktok nav_icon"></i>
 
@@ -104,83 +114,83 @@
 
           </a>-->
 
-          <a href="/html/profile.html" class="nav_link navtop">
+            <a href="/html/profile.html" class="nav_link navtop">
 
-            <i class="fa-solid fa-users nav_icon"></i>
+              <i class="fa-solid fa-users nav_icon"></i>
 
-            <span class="nav_name">About</span>
-
-          </a>
-
-          <a href="#" class="nav_link navtop">
-
-            <i class="fa-solid fa-video nav_icon"></i>
-
-            <span class="nav_name">Library</span>
-
-          </a>
-
-          <a href="#" class="nav_link navtop">
-
-            <i class="fa-solid fa-clock-rotate-left nav_icon"></i>
-
-            <span class="nav_name">History</span>
-
-          </a>
-
-          <a href="#" class="nav_link navtop">
-
-            <i class="fa-solid fa-thumbs-up nav_icon"></i>
-
-            <span class="nav_name">Like</span>
-
-          </a>
-
-          <div class="nav_dropdown">
-
-            <a href="#" class="nav_link">
-
-              <i class="fa-solid fa-layer-group nav_icon"></i>
-
-              <span class="nav_name">Categories</span>
-
-              <i class="fa-solid fa-chevron-down nav_icon"></i>
+              <span class="nav_name">About</span>
 
             </a>
 
-            <div class="nav_dropdown-collapse">
+            <a href="#" class="nav_link navtop">
 
-              <div class="nav_dropdown-content">
+              <i class="fa-solid fa-video nav_icon"></i>
 
-                <a href="/categories/anal.html" class="nav_dropdown-item">Anal</a>
-                <a href="/categories/aunty.html" class="nav_dropdown-item">Aunty</a>
-                <a href="/categories/arab.html" class="nav_dropdown-item">Arab</a>
-                <a href="/categories/asian.html" class="nav_dropdown-item">Asian</a>
-                <a href="/categories/bbc.html" class="nav_dropdown-item">BBC</a>
-                <a href="/categories/bbw.html" class="nav_dropdown-item">BBW</a>
-                <a href="/categories/bhabhi.html" class="nav_dropdown-item">Bhabhi</a>
-                <a href="/categories/black.html" class="nav_dropdown-item">Black</a>
-                <a href="/categories/cumshot.html" class="nav_dropdown-item">Cumshot</a>
-                <a href="/categories/deepthroat.html" class="nav_dropdown-item">Deepthroat</a>
-                <a href="/categories/gangbang.html" class="nav_dropdown-item">Gangbang</a>
-                <a href="/categories/hardcore.html" class="nav_dropdown-item">Hardcore</a>
-                <a href="/categories/hentai.html" class="nav_dropdown-item">Hentai</a>
-                <a href="/categories/hindi.html" class="nav_dropdown-item">Hindi</a>
-                <a href="/categories/indian.html" class="nav_dropdown-item">Indian</a>
-                <a href="/categories/maid.html" class="nav_dropdown-item">Maid</a>
-                <a href="/categories/mms.html" class="nav_dropdown-item">MMS</a>
-                <a href="/categories/movie.html" class="nav_dropdown-item">Movie</a>
-                <a href="/categories/solo.html" class="nav_dropdown-item">Solo</a>
-                <a href="/categories/ownerschoice.html" class="nav_dropdown-item">Owner's Choice</a>
+              <span class="nav_name">Library</span>
+
+            </a>
+
+            <a href="#" class="nav_link navtop">
+
+              <i class="fa-solid fa-clock-rotate-left nav_icon"></i>
+
+              <span class="nav_name">History</span>
+
+            </a>
+
+            <a href="#" class="nav_link navtop">
+
+              <i class="fa-solid fa-thumbs-up nav_icon"></i>
+
+              <span class="nav_name">Like</span>
+
+            </a>
+
+            <div class="nav_dropdown">
+
+              <a href="#" class="nav_link">
+
+                <i class="fa-solid fa-layer-group nav_icon"></i>
+
+                <span class="nav_name">Categories</span>
+
+                <i class="fa-solid fa-chevron-down nav_icon"></i>
+
+              </a>
+
+              <div class="nav_dropdown-collapse">
+
+                <div class="nav_dropdown-content">
+
+                  <a href="/categories/anal.html" class="nav_dropdown-item">Anal</a>
+                  <a href="/categories/aunty.html" class="nav_dropdown-item">Aunty</a>
+                  <a href="/categories/arab.html" class="nav_dropdown-item">Arab</a>
+                  <a href="/categories/asian.html" class="nav_dropdown-item">Asian</a>
+                  <a href="/categories/bbc.html" class="nav_dropdown-item">BBC</a>
+                  <a href="/categories/bbw.html" class="nav_dropdown-item">BBW</a>
+                  <a href="/categories/bhabhi.html" class="nav_dropdown-item">Bhabhi</a>
+                  <a href="/categories/black.html" class="nav_dropdown-item">Black</a>
+                  <a href="/categories/cumshot.html" class="nav_dropdown-item">Cumshot</a>
+                  <a href="/categories/deepthroat.html" class="nav_dropdown-item">Deepthroat</a>
+                  <a href="/categories/gangbang.html" class="nav_dropdown-item">Gangbang</a>
+                  <a href="/categories/hardcore.html" class="nav_dropdown-item">Hardcore</a>
+                  <a href="/categories/hentai.html" class="nav_dropdown-item">Hentai</a>
+                  <a href="/categories/hindi.html" class="nav_dropdown-item">Hindi</a>
+                  <a href="/categories/indian.html" class="nav_dropdown-item">Indian</a>
+                  <a href="/categories/maid.html" class="nav_dropdown-item">Maid</a>
+                  <a href="/categories/mms.html" class="nav_dropdown-item">MMS</a>
+                  <a href="/categories/movie.html" class="nav_dropdown-item">Movie</a>
+                  <a href="/categories/solo.html" class="nav_dropdown-item">Solo</a>
+                  <a href="/categories/ownerschoice.html" class="nav_dropdown-item">Owner's Choice</a>
 
 
 
+
+                </div>
 
               </div>
 
-            </div>
-
-            <!-- 
+              <!-- 
 
            <div class="nav_items subscribe-container">
 
@@ -196,9 +206,9 @@
 
            </div>-->
 
-          </div>
+            </div>
 
-          <!--  <div class="nav_items subscribe-container">
+            <!--  <div class="nav_items subscribe-container">
 
        
 
@@ -280,18 +290,18 @@
 
         </div>-->
 
+          </div>
+
         </div>
 
-      </div>
+      </nav>
 
-    </nav>
+    </section>
 
-  </section>
+  </div>
+  <!--    nav      -->
 
-</div>
-<!--    nav      -->
 
-  
 
   <main class="single_pages">
 
@@ -797,11 +807,11 @@
           </div>
           <div class="more">
             <a href="/">
-          <button class="btn-more">MORE...</button>
+              <button class="btn-more">MORE...</button>
             </a>
           </div>
         </div>
-        </div>
+      </div>
     </section>
 
   </main>
