--- a/videoweb.html/video15.html
+++ b/videoweb.html/video15.html
@@ -50,13 +50,20 @@
 
     <div class="none"> </div>
 
-    <div class="search">
-
-      <input type="text" placeholder="Search">
-
-      <i class="fa-solid fa-magnifying-glass"></i>
-
+     <div class="wrapper">
+      <div class="search-input">
+        <a href="" target="_blank" hidden></a>
+        <input type="text" placeholder="Type to search..">
+        <div class="autocom-box">
+          <!-- here list are inserted from javascript -->
+        </div>
+        <div class="icon"><i class="fas fa-search"></i></div>
+      </div>
     </div>
+
+    <script src="/js/suggestions.js"></script> 
+     <script src="/js/script.js"></script> 
+
 
 
 
