--- a/videoweb.html/video14.html
+++ b/videoweb.html/video14.html
@@ -23,7 +23,7 @@
 
   </style>
 
-  <title>DHIRAJHUB </title>
+  <title>brazzers doctor adventures my husband is right outside| DHIRAJHUB  </title>
 
 </head>
 
@@ -421,10 +421,9 @@
 
               <span>15M Subscribers</span>
 
-              <h5>brazzers-doctor adventures my husband is right outside | Dark/LIght Mode | DHIRAJHUB </h5>
+              <h5>brazzers doctor adventures my husband is right outside| DHIRAJHUB </h5>
 
-              <h5>brazzers-doctor-adventures-my-husband-is-right-outside</h5>
-
+             
               <span>Show More</span>
 
             </div>
