--- a/videoweb.html/video2.html
+++ b/videoweb.html/video2.html
@@ -23,7 +23,7 @@
 
   </style>
 
-  <title>DHIRAJHUB </title>
+  <title>mia khalifa 1000 midnights bbc compilation || ~ DHIRAJHUB  </title>
 
 </head>
 
