--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             </div>
             <div class="msg">
               If you want to upload your videos or you have any suggestions mail us on~<br>
-              <li>idhiraj357@gmail.com</li>
+              <li><a href="mailto:idhiraj357@gmail.com">idhiraj357@gmail.com</a></li>
             </div>
 
             <!--<div class="container">
