--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               </div>
             </div>
             <div class="msg">
-              If you want to upload your videos or you have any suggestions mail us on~<br>
+              If you want to upload your videos or you have any suggestions mail us on~<br><br>
               <li><a href="mailto:idhiraj357@gmail.com">idhiraj357@gmail.com</a></li>
             </div>
 
