--- a/videoweb.html/anal-vids/anal7.html
+++ b/videoweb.html/anal-vids/anal7.html
@@ -316,7 +316,7 @@
           <!--        video tages            -->
 
           <iframe src="https://xhamster18.desi/videos/blacked-lana-rhodes-can-t-stop-cheating-with-anal-bbc-9225430" 
-          width="760" height="760px" frameBorder="0" style="border: 0;"></iframe><br> <a href="" target="_blank"></a>
+          width="760" height="760px" id="vid"  frameBorder="0" style="border: 0;"></iframe><br> <a href="" target="_blank"></a>
 
 
 
