--- a/videoweb.html/anal-vids/anal8.html
+++ b/videoweb.html/anal-vids/anal8.html
@@ -317,7 +317,7 @@
           <!--        video tages            -->
 
           <iframe src="https://xhamster18.desi/videos/mandy-muse-going-black-and-there-s-no-way-back-xhG6Pwe"
-           width="760" height="760px" frameBorder="0" style="border: 0;"></iframe><br> <a href="" target="_blank"></a>
+           width="760" height="760px" id="vid"  frameBorder="0" style="border: 0;"></iframe><br> <a href="" target="_blank"></a>
 
 
 
