--- a/index.html
+++ b/index.html
@@ -537,8 +537,8 @@
   </main><br>
   <div class="pagination ">
     <ul>
-      
-      <li><a href="#">2</a></li>
+      <li><a href="/"><h3>1</h3></a></li>
+      <li><a href="/pages/2.html">2</a></li>
       <li><a href="#">3</a></li>
       <li><a href="#">4</a></li>
       <li><a href="#">5</a></li>
@@ -549,15 +549,20 @@
       <li><a href="#">10</a></li>
 
       <li class="no-page"><a href="#" class="ellipsis last-ellipsis">...</a></li>
-      <li><a href="#" class="last-page">1001</a></li>
-      <li><a href="#" class="no-page next-page">
-          <span class="mobile-hide">Next</span>
+    <!--  <li><a href="#" class="last-page">1001</a></li>-->
+      <li><a href="/pages/2.html" class="no-page next-page">
+          <span class="mobile-hide" >Next</span>
           <span class="mobile-show-inline icon-f icf-chevron-right"></span>
         </a>
       </li>
     </ul>
-  </div><br>
-  <br>
+  </div><br><br>
+
+
+
+<script async="async" data-cfasync="false" src="//pl17895325.highperformancecpmgate.com/5dc96a5d3e56af820462d94947b5891a/invoke.js"></script>
+<div id="container-5dc96a5d3e56af820462d94947b5891a"></div>
+  <br><br>
 
   <div class="footer">
     <a href="https://www.dhirajingle.ml">
