--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1066708901288975"
-  crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link type="images/png" rel="icon" href="/images/logo1.jpeg">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
     integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous" />
@@ -38,10 +38,10 @@
       </div>
     </div>
 
-    <script src="/js/suggestions.js"></script> 
-     <script src="/js/script.js"></script> 
+    <script src="/js/suggestions.js"></script>
+    <script src="/js/script.js"></script>
 
- 
+
 
     <br>
 
@@ -52,7 +52,7 @@
     </div>
   </header>
   <!--    header      -->
-  
+
 
   <!--    nav      -->
   <div>
@@ -116,7 +116,7 @@
                 <span class="nav_name">Categories</span>
                 <i class="fa-solid fa-chevron-down nav_icon"></i>
               </div>
-              
+
               <div class="nav_dropdown-collaps">
                 <ul class="nav_dropdown-content" id="myUL">
                   <li> <a href="/categories/anal.html" class="nav_dropdown-item">Anal</a></li>
@@ -377,8 +377,10 @@
         </div>
       </div>
       <br>
-      <script async="async" data-cfasync="false" src="//pl17895325.highperformancecpmgate.com/5dc96a5d3e56af820462d94947b5891a/invoke.js"></script>
-      <div id="container-5dc96a5d3e56af820462d94947b5891a"></div><br>
+      <script async="async" data-cfasync="false"
+        src="//pl17895325.highperformancecpmgate.com/5dc96a5d3e56af820462d94947b5891a/invoke.js"></script>
+      <div id="container-5dc96a5d3e56af820462d94947b5891a"></div>
+      <br>
       <div class="video_items">
         <a href="/videoweb.html/video9.html">
           <img src="images/THUMBNAILS/09.jpg" alt="">
@@ -540,7 +542,9 @@
   </main><br>
   <div class="pagination ">
     <ul>
-      <li><a href="/"><h3>1</h3></a></li>
+      <li><a href="/">
+          <h3>1</h3>
+        </a></li>
       <li><a href="/pages/2.html">2</a></li>
       <li><a href="#">3</a></li>
       <li><a href="#">4</a></li>
@@ -552,9 +556,9 @@
       <li><a href="#">10</a></li>
 
       <li class="no-page"><a href="#" class="ellipsis last-ellipsis">...</a></li>
-    <!--  <li><a href="#" class="last-page">1001</a></li>-->
+      <!--  <li><a href="#" class="last-page">1001</a></li>-->
       <li><a href="/pages/2.html" class="no-page next-page">
-          <span class="mobile-hide" >Next</span>
+          <span class="mobile-hide">Next</span>
           <span class="mobile-show-inline icon-f icf-chevron-right"></span>
         </a>
       </li>
@@ -563,8 +567,9 @@
 
 
 
-<script async="async" data-cfasync="false" src="//pl17895325.highperformancecpmgate.com/5dc96a5d3e56af820462d94947b5891a/invoke.js"></script>
-<div id="container-5dc96a5d3e56af820462d94947b5891a"></div>
+  <script async="async" data-cfasync="false"
+    src="//pl17895325.highperformancecpmgate.com/5dc96a5d3e56af820462d94947b5891a/invoke.js"></script>
+  <div id="container-5dc96a5d3e56af820462d94947b5891a"></div>
   <br><br>
 
   <div class="footer">
