--- a/pages/2.html
+++ b/pages/2.html
@@ -13,6 +13,9 @@
         integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/style.css">
     <title>DHIRAJHUB </title>
+    <script type='text/javascript'
+        src='//pl17896756.highperformancecpmgate.com/49/e8/98/49e8982680eac34ddb3ff5cd5af16a44.js'></script>
+
 </head>
 
 <body>
@@ -322,6 +325,20 @@
         </ul>
     </div><br>
     <br>
+    <script async="async" data-cfasync="false"
+        src="//pl17895325.highperformancecpmgate.com/5dc96a5d3e56af820462d94947b5891a/invoke.js"></script>
+    <div id="container-5dc96a5d3e56af820462d94947b5891a"></div>
+    <br><br>
+
+    <div class="footer">
+        <a href="https://www.dhirajingle.ml">
+            @dhirajingle.ml</a>
+
+        <a href="https://www.krushnal09.cf">
+            @krushnal09.cf</a>
+
+
+    </div>
 
     <script src="/js/search.js" charset="utf-8"></script>
     <script src="/js/main.js" charset="utf-8"></script>
