--- a/videoweb.html/video20.html
+++ b/videoweb.html/video20.html
@@ -4,7 +4,7 @@
 
 <head>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1066708901288975"
-  crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
   <meta charset="UTF-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,11 @@
 
   <title>DHIRAJHUB </title>
 
+  <script type='text/javascript'
+    src='//pl17896756.highperformancecpmgate.com/49/e8/98/49e8982680eac34ddb3ff5cd5af16a44.js'></script>
+
 </head>
+
 
 <body>
 
@@ -51,7 +55,7 @@
 
     <div class="none"> </div>
 
-     <div class="wrapper">
+    <div class="wrapper">
       <div class="search-input">
         <a href="" target="_blank" hidden></a>
         <input type="text" placeholder="Search..">
@@ -62,8 +66,8 @@
       </div>
     </div>
 
-    <script src="/js/suggestions.js"></script> 
-     <script src="/js/script.js"></script> 
+    <script src="/js/suggestions.js"></script>
+    <script src="/js/script.js"></script>
 
 
 
@@ -362,13 +366,13 @@
           <!--        video tages            -->
 
 
-          <iframe src="https://www.xvideos.com/embedframe/69274887" frameborder=0  width="760px" height="760px" id="vid"
+          <iframe src="https://www.xvideos.com/embedframe/69274887" frameborder=0 width="760px" height="760px" id="vid"
             scrolling=no allowfullscreen=allowfullscreen></iframe>
 
 
           <!--        total viwer            -->
 
-           <div class="view flex2 border_bottom" id="xxx">
+          <div class="view flex2 border_bottom" id="xxx">
 
 
 
@@ -850,9 +854,14 @@
               <span>56.7M . 1 Week ago</span>
             </div>
           </div>
+          <div class="video_items vide_sidebar flex">
+            <script async="async" data-cfasync="false"
+              src="//pl17895325.highperformancecpmgate.com/5dc96a5d3e56af820462d94947b5891a/invoke.js"></script>
+            <div id="container-5dc96a5d3e56af820462d94947b5891a"></div><br>
+          </div>
           <div class="more">
             <a href="/">
-          <button class="btn-more">MORE...</button>
+              <button class="btn-more">MORE...</button>
             </a>
           </div>
         </div>
@@ -863,6 +872,10 @@
 
   <script src="/js/main.js" charset="utf-8"></script>
 
+<script type='text/javascript' src='//pl17898953.highperformancecpmgate.com/80/1d/b5/801db57f63f19c86e06df337a0a87359.js'></script>
+
+
 </body>
+
 
 </html>
