--- a/html/profile.html
+++ b/html/profile.html
@@ -9,7 +9,7 @@
   <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/profile.css">
   <link rel="stylesheet" href=" /css/K Profile-card.css">
- <link rel="stylesheet" href=" /css/D Profile-card.css">
+  <link rel="stylesheet" href=" /css/D Profile-card.css">
   <title>ABOUT || ~ DHIRAJHUB</title>
 </head>
 
@@ -20,7 +20,7 @@
         <div class="card">
 
           <div class="img-bx"><a href="/index.html">
-              <img src="/images/logo1.jpeg" alt="img" />
+              <img src="/images/logo1.jpeg" alt="img">
             </a>
           </div>
           <div class="content">
@@ -50,12 +50,12 @@
       <div class="centered">
         <div class="card">
           <a href="https://krushnal09.cf/">
+          <div class="img-bx">
+              <img src="/images/Krushnal patil.jpeg" alt="img">
+            
+          </div>
+        </a>
 
-            <div class="img-bx">
-              <img src="/images/Krushnal patil.jpeg" alt="img" />
-
-            </div>
-          </a>
           <div class="content">
             <div class="detail">
               <h2>Manage by-<br>
@@ -81,6 +81,7 @@
       </div>
     </div>
   </div>
+ 
 </body>
 
 </html>
