--- a/videoweb.html/anal-vids/anal1.html
+++ b/videoweb.html/anal-vids/anal1.html
@@ -738,7 +738,7 @@
 
         <div class="right_content">
 
-          <button class="chat">Show Chat Replay</button>
+          <button class="chat"><h2>Suggested Videos</h2></button>
           <!--
           <div class="tags">
             <label class="tags-bg">All</label>
@@ -746,7 +746,7 @@
             <label class="tags-bg">Frontend</label>
             <label class="tags-bg">Backend</label>
           </div>
--->
+          -->
          <div class="video_items vide_sidebar flex">
             <a href="/videoweb.html//anal-vids/anal4.html">
               <img src="/images/THUMBNAILS/anal-thumb/04.jpg" alt="">
