--- a/videoweb.html/anal-vids/anal4.html
+++ b/videoweb.html/anal-vids/anal4.html
@@ -736,7 +736,7 @@
 
         <div class="right_content">
 
-          <button class="chat">Show Chat Replay</button>
+          <button class="chat"><h2>Suggested Videos</h2></button>
           <!--
           <div class="tags">
             <label class="tags-bg">All</label>
