--- a/videoweb.html/video17.html
+++ b/videoweb.html/video17.html
@@ -784,7 +784,7 @@
 
         <div class="right_content">
 
-          <button class="chat">Show Chat Replay</button>
+          <button class="chat"><h2>Suggested Videos</h2></button>
 
           <!--
           <div class="tags">
