--- a/videoweb.html/video2.html
+++ b/videoweb.html/video2.html
@@ -751,7 +751,7 @@
 
         <div class="right_content">
 
-          <button class="chat">Show Chat Replay</button>
+          <button class="chat"><h2>Suggested Videos</h2></button>
           <!--
           <div class="tags">
             <label class="tags-bg">All</label>
