--- a/videoweb.html/video20.html
+++ b/videoweb.html/video20.html
@@ -783,7 +783,7 @@
 
         <div class="right_content">
 
-          <button class="chat">Show Chat Replay</button>
+          <button class="chat"><h2>Suggested Videos</h2></button>
 
           <!--
           <div class="tags">
